--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pyTelegramBotAPI = "^4.7.1"
 python-dotenv = "^0.21.0"
 Flask-Admin = "^1.6.0"
 Pillow = "^9.3.0"
+Flask-BabelEx = "^0.9.4"
+Flask-Login = "^0.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
