--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ Flask-Admin = "^1.6.0"
 Pillow = "^9.3.0"
 Flask-BabelEx = "^0.9.4"
 Flask-Login = "^0.6.2"
+aiogram = "^2.23.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
