--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ Pillow = "^9.3.0"
 Flask-BabelEx = "^0.9.4"
 Flask-Login = "^0.6.2"
 aiogram = "^2.23.1"
+rethinkdb = "^2.4.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
