feat: настройка графиков

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,9 @@ Flask-Admin = "^1.6.0"
 Pillow = "^9.3.0"
 Flask-BabelEx = "^0.9.4"
 Flask-Login = "^0.6.2"
-aiogram = "^2.23.1"
-rethinkdb = "^2.4.9"
+dash = "^2.7.0"
+pandas = "^1.5.2"
+dash-auth = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
